--- a/bikes.html
+++ b/bikes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/bikenation.css" rel="stylesheet">
-    <link href="css/about.css" rel="stylesheet">
+    <link href="css/bikes.css" rel="stylesheet">
     
     <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
 </head>
@@ -41,11 +41,38 @@
         </div>
     </nav>
     <header class="small-header">
-        <div class="nav-filler"></div>
-        <div class="wrapper">
-
-        </div>
+            <div class="wrapper">
+                <div class="text">
+                    <h2>Al onze fietsen</h2>
+                </div>
+            </div>
     </header>
+
+    <section class="page-content">
+        <div class="wrapper">
+            <a href="/omafiets.html" class="bike">
+                <div class="content">
+                    <h1>Omafiets</h1>
+                </div>
+            </a>
+            <a href="/elektrischefiets.html" class="bike">
+                <div class="content">
+                    <h1>Elektrische fiets</h1>
+                </div>
+            </a>
+            <a href="/bakfiets.html" class="bike">
+                <div class="content">
+                    <h1>Bakfiets</h1>
+                </div>
+            </a>
+            <a href="/mountainbike.html" class="bike">
+                <div class="content">
+                    <h1>Mountainbike</h1>
+                </div>
+            </a>
+        </div>
+    </section>
+
     <footer>
             <div id="topfooter">
                 <div class="wrapper">
