--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
     <header class="small-header">
         <div class="wrapper">
             <div class="text">
-                <h2>Gallery</h2>
+                <h2>Contact Us</h2>
             </div>
         </div>
     </header>
 
-    <section>
+    <section class="page-content">
         <div class="wrapper">
             <div class="form">
                 <div class="circle-big">
@@ -133,11 +133,11 @@
     <footer>
         <div id="topfooter">
             <div class="wrapper">
-                <div class="column">
+                <div class="column outside">
                     <h2>Wellicht handig</h2>
                     <ul>
-                        <li><a href="about.html">Over ons</a> </li>
-                        <li><a href="">Privacy</a></li>
+                        <li><a href="/about.html">Over ons</a> </li>
+                        <li><a href="/contact.html">Contact</a></li>
                         <li><a href="">Voorwaarden</a></li>
                     </ul>
                 </div>
@@ -157,18 +157,18 @@
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                 </div>
-                <div class="column">
+                <div class="column outside">
                     <h2>Bekijk ook eens</h2>
                     <ul>
-                        <li><a href="">Dames fietsen</a></li>
-                        <li><a href="">Mountain Bikes</a></li>
+                        <li><a href="/omafiets.html">Oma fietsen</a></li>
+                        <li><a href="/mountainbike.html">Mountainbikes</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div id="bottomfooter">
             <div class="wrapper">
-                <p>All rights reserved to<span>BikeNation</span> 2017</p>
+                <p>All rights reserved to <span>BikeNation</span> 2017</p>
             </div>
         </div>
     </footer>
