--- a/mountainbike.html
+++ b/mountainbike.html
@@ -169,42 +169,47 @@
         </div>
     </section>
     <footer>
-        <div id="topfooter">
-            <div class="wrapper">
-                <div class="column">
-                    <h2>Wellicht handig</h2>
-                    <ul>
-                        <li><a href="about.html">Over ons</a></li>
-                        <li><a href="">Privacy</a></li>
-                        <li><a href="">Voorwaarden</a></li>
-                        <li><a href=""></a></li>
-                    </ul>
-                </div>
-                <div class="column" id="follow">
-                    <h2>Volg ons</h2>
-
-                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a class="circle" href="https://nl-nl.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-heart" aria-hidden="true"></i></a>
-                    <a class="circle" href="https://twitter.com/?lang=nl"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                </div>
-                <div class="column">
-                    <h2>Bekijk ook eens</h2>
-                    <ul>
-                        <li><a href="">Dames fietsen</a></li>
-                        <li><a href="">Mountain Bikes</a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                    </ul>
+            <div id="topfooter">
+                <div class="wrapper">
+                    <div class="column outside">
+                        <h2>Wellicht handig</h2>
+                        <ul>
+                            <li><a href="/about.html">Over ons</a> </li>
+                            <li><a href="/contact.html">Contact</a></li>
+                            <li><a href="">Voorwaarden</a></li>
+                        </ul>
+                    </div>
+                    <div class="column follow">
+                        <h2>Volg ons</h2>
+    
+                        <a class="circle" href="https://twitter.com/?lang=nl">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle" href="https://nl-nl.facebook.com/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle" href="https://plus.google.com/">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle" href="https://www.instagram.com/?hl=nl">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="column outside">
+                        <h2>Bekijk ook eens</h2>
+                        <ul>
+                            <li><a href="/omafiets.html">Oma fietsen</a></li>
+                            <li><a href="/mountainbike.html">Mountainbikes</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div id="bottomfooter">
-            <div class="wrapper">
-                <p>All rights reserved to <span>BikeNation</span> 2017</p>
+            <div id="bottomfooter">
+                <div class="wrapper">
+                    <p>All rights reserved to <span>BikeNation</span> 2017</p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
