--- a/bikes.html
+++ b/bikes.html
@@ -50,22 +50,22 @@
 
     <section class="page-content">
         <div class="wrapper">
-            <a href="/omafiets.html" class="bike">
+            <a href="../omafiets.html" class="bike">
                 <div class="content">
                     <h1>Omafiets</h1>
                 </div>
             </a>
-            <a href="/elektrischefiets.html" class="bike">
+            <a href="../elektrischefiets.html" class="bike">
                 <div class="content">
                     <h1>Elektrische fiets</h1>
                 </div>
             </a>
-            <a href="/bakfiets.html" class="bike">
+            <a href="../bakfiets.html" class="bike">
                 <div class="content">
                     <h1>Bakfiets</h1>
                 </div>
             </a>
-            <a href="/mountainbike.html" class="bike">
+            <a href="../mountainbike.html" class="bike">
                 <div class="content">
                     <h1>Mountainbike</h1>
                 </div>
