Started working on about us page

--- a/about.html
+++ b/about.html
@@ -41,11 +41,43 @@
         </div>
     </nav>
     <header class="small-header">
-        <div class="nav-filler"></div>
-        <div class="wrapper">
-
-        </div>
+            <div class="wrapper">
+                <div class="text">
+                    <h2>Over ons</h2>
+                </div>
+            </div>
     </header>
+
+    <section>
+        <div class="wrapper">
+            <div class="about">
+                <div class="circle-big"><i class="fa fa-users" aria-hidden="true"></i></div>
+                <div class="content">
+                    <div class="person">
+                        <h2>Marijn Dame</h2>
+                        <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat
+                        </p>
+                    </div>
+                    <div class="person">
+                            <h2>Sander Aalbers</h2>
+                            <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat
+                            </p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
             <div id="topfooter">
                 <div class="wrapper">
