--- a/bikes.html
+++ b/bikes.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>BikeNation - about us</title>
+    <title>BikeNation - Al onze fietsen</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
@@ -50,22 +50,22 @@
 
     <section class="page-content">
         <div class="wrapper">
-            <a href="../omafiets.html" class="bike">
+            <a href="omafiets.html" class="bike">
                 <div class="content">
                     <h1>Omafiets</h1>
                 </div>
             </a>
-            <a href="../elektrischefiets.html" class="bike">
+            <a href="elektrischefiets.html" class="bike">
                 <div class="content">
                     <h1>Elektrische fiets</h1>
                 </div>
             </a>
-            <a href="../bakfiets.html" class="bike">
+            <a href="bakfiets.html" class="bike">
                 <div class="content">
                     <h1>Bakfiets</h1>
                 </div>
             </a>
-            <a href="../mountainbike.html" class="bike">
+            <a href="mountainbike.html" class="bike">
                 <div class="content">
                     <h1>Mountainbike</h1>
                 </div>
