--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
     </nav>
     <header>
         <div class="wrapper">
-            <div class="nav-filler"></div>
             <div id="header-content">
-
+                <article>
+                    <h1>BikeNation</h1>
+                    <h2>A bike ride a day, keeps the doctor away</h2>
+                </article>
             </div>
             <div id="contact" class="row row-3">
                 <div>
@@ -78,8 +80,24 @@
             </article>
         </div>
     </div>
-    <div class="parallax">
-
+    <div id="slider">
+        <div class="slider-inner">
+            <article>
+                <div>
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                </div>
+            </article>
+            <article>
+                <div>
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                </div>
+            </article>
+        </div>
     </div>
     <div id="sorts">
         <div class="wrapper">
