Added about us to homepage

--- a/index.html
+++ b/index.html
@@ -21,20 +21,40 @@
             </div>
             <div id="menu">
                 <input type="checkbox" id="menu-open">
-                <label for="menu-open"><i class="fa fa-bars" aria-hidden="true"></i> Menu</label>
+                <label for="menu-open">
+                    <i class="fa fa-bars" aria-hidden="true"></i> Menu</label>
                 <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="bikes.html">Fietsen <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="bikes.html">Fietsen
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                        </a>
                         <ol>
-                            <li><a href="bakfiets.html">Bakfiets</a></li>
-                            <li><a href="omafiets.html">Omafiets</a></li>
-                            <li><a href="mountainbike.html">Mountainbike</a></li>
-                            <li><a href="elektrischefiets.html">Elektrischefiets</a></li>
+                            <li>
+                                <a href="bakfiets.html">Bakfiets</a>
+                            </li>
+                            <li>
+                                <a href="omafiets.html">Omafiets</a>
+                            </li>
+                            <li>
+                                <a href="mountainbike.html">Mountainbike</a>
+                            </li>
+                            <li>
+                                <a href="elektrischefiets.html">Elektrischefiets</a>
+                            </li>
                         </ol>
                     </li>
-                    <li><a href="gallery.html">Gallerij</a></li>
-                    <li><a href="about.html">Over Ons</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="gallery.html">Gallerij</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Over Ons</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
                 </ol>
             </div>
         </div>
@@ -65,18 +85,28 @@
     </header>
     <div id="about">
         <div class="wrapper">
-            <h1>Header</h1>
-            <h2>Titel</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div>
+                <img src="http://flashback.as.ucsb.edu/2014-15/files/2015/06/AR15-Bike-Shop-Staff.jpg" alt="">
+                <p>Het trotse BikeNation team</p>
+            </div>
             <article>
-
+                <h1>BikeNation</h1>
+                <ol>
+                    <li><i class="fa fa-check-square" aria-hidden="true"></i> Snelle reperatie</li>
+                    <li><i class="fa fa-check-square" aria-hidden="true"></i> Altijd welkom</li>
+                    <li><i class="fa fa-check-square" aria-hidden="true"></i> Alleen top kwaliteit fietsen</li>
+                    <li><i class="fa fa-check-square" aria-hidden="true"></i> Persoonlijke aandacht</li>
+                </ol>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
             </article>
         </div>
     </div>
@@ -119,47 +149,58 @@
         </div>
     </div>
     <footer>
-            <div id="topfooter">
-                <div class="wrapper">
-                    <div class="column outside">
-                        <h2>Wellicht handig</h2>
-                        <ul>
-                            <li><a href="/about.html">Over ons</a> </li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="">Voorwaarden</a></li>
-                        </ul>
-                    </div>
-                    <div class="column follow">
-                        <h2>Volg ons</h2>
-    
-                        <a class="circle" href="https://twitter.com/?lang=nl">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://nl-nl.facebook.com/">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://plus.google.com/">
-                            <i class="fa fa-google-plus" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://www.instagram.com/?hl=nl">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="column outside">
-                        <h2>Bekijk ook eens</h2>
-                        <ul>
-                            <li><a href="/omafiets.html">Oma fietsen</a></li>
-                            <li><a href="/mountainbike.html">Mountainbikes</a></li>
-                        </ul>
-                    </div>
+        <div id="topfooter">
+            <div class="wrapper">
+                <div class="column outside">
+                    <h2>Wellicht handig</h2>
+                    <ul>
+                        <li>
+                            <a href="/about.html">Over ons</a>
+                        </li>
+                        <li>
+                            <a href="/contact.html">Contact</a>
+                        </li>
+                        <li>
+                            <a href="">Voorwaarden</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column follow">
+                    <h2>Volg ons</h2>
+
+                    <a class="circle" href="https://twitter.com/?lang=nl">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                    <a class="circle" href="https://nl-nl.facebook.com/">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a class="circle" href="https://plus.google.com/">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </a>
+                    <a class="circle" href="https://www.instagram.com/?hl=nl">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <div class="column outside">
+                    <h2>Bekijk ook eens</h2>
+                    <ul>
+                        <li>
+                            <a href="/omafiets.html">Oma fietsen</a>
+                        </li>
+                        <li>
+                            <a href="/mountainbike.html">Mountainbikes</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div id="bottomfooter">
-                <div class="wrapper">
-                    <p>All rights reserved to <span>BikeNation</span> 2017</p>
-                </div>
+        </div>
+        <div id="bottomfooter">
+            <div class="wrapper">
+                <p>All rights reserved to
+                    <span>BikeNation</span> 2017</p>
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 
 </html>
