Added news section in index.html

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
             <div id="contact" class="row row-3">
                 <div>
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <span>mail@bikenation.com</span>
+                    <p>mail@bikenation.com</p>
                 </div>
                 <div>
                     <i class="fa fa-phone" aria-hidden="true"></i>
-                    <span>00-00000000</span>
+                    <p>00-00000000</p>
                 </div>
                 <div>
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-                    <span>Amsterdam, Netherlands</span>
+                    <p>Amsterdam, Netherlands</p>
                 </div>
             </div>
         </div>
@@ -129,21 +129,53 @@
             </article>
         </div>
     </div>
-    <div id="sorts">
+    <div id="news">
         <div class="wrapper">
-            <h3>Titel</h3>
-            <div class="row row-4">
+            <h1>Nieuws</h1>
+            <div class="news-container row row-4">
                 <div>
-                    <article class="card"></article>
+                    <article class="card">
+                        <div class="image">
+                            <img src="images/fietsenwinkel.jpg" alt="Onze nieuwe vestiging">
+                        </div>
+                        <div class="content">
+                            <h2><span>Nieuwe</span> vestiging</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                    </article>
                 </div>
                 <div>
-                    <article class="card"></article>
+                    <article class="card">
+                        <div class="image">
+                            <img src="images/sales.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h2>Sales tot <span>40%</span></h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                    </article>
                 </div>
                 <div>
-                    <article class="card"></article>
+                    <article class="card">
+                        <div class="image">
+                            <img src="images/newmember.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h2><span>Nieuw</span> Teamlid</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                    </article>
                 </div>
                 <div>
-                    <article class="card"></article>
+                    <article class="card">
+                        <div class="image">
+                            <img src="images/party.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h2>Uitgeroepen tot <span>beste</span> fietsen winkel!</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </div>
