Auto prefixed everything, fixed small bugs in all pages, finished homepage and did some design things

--- a/bakfiets.html
+++ b/bakfiets.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <header class="small-header">
+    <header class="small-header" style="background-image: url('https://s3-eu-west-1.amazonaws.com/fietsersbond/app/uploads/2013/09/18104011/urbanarrow.jpg')">
         <div class="wrapper">
             <div class="text">
                 <h2>Bakfiets</h2>
@@ -51,7 +51,7 @@
         <div class="wrapper">
             <article>
                 <div class="card">
-                    <div class="title"><h1>Bakfiets</h1><h2>Prijs &euro;500,-</h2></div>
+                    <div class="title"><h1>Bakfiets</h1><h2>Prijs &mdash; &euro;500,-</h2></div>
                     <h2>Omschrijving</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -180,19 +180,21 @@
                     </div>
                     <div class="column follow">
                         <h2>Volg ons</h2>
-    
-                        <a class="circle" href="https://twitter.com/?lang=nl">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://nl-nl.facebook.com/">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://plus.google.com/">
-                            <i class="fa fa-google-plus" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://www.instagram.com/?hl=nl">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
+
+                        <div class="social">
+                            <a class="circle circle-white circle-shadow" href="https://twitter.com/?lang=nl">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                            <a class="circle circle-white circle-shadow" href="https://nl-nl.facebook.com/">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <a class="circle circle-white circle-shadow" href="https://plus.google.com/">
+                                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                            </a>
+                            <a class="circle circle-white circle-shadow" href="https://www.instagram.com/?hl=nl">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                     <div class="column outside">
                         <h2>Bekijk ook eens</h2>
