--- a/contact.html
+++ b/contact.html
@@ -64,10 +64,10 @@
     <section class="page-content">
         <div class="wrapper">
             <div class="form">
-                <div class="circle-big">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                </div>
-                <form>
+                <form class="card">
+                    <div class="circle circle-big circle-purple">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </div>
                     <ul>
                         <li>
                             <h1>Verstuur een bericht!</h1>
@@ -102,25 +102,25 @@
                             <textarea id="bericht"></textarea>
                         </li>
                         <li>
-                            <input type="submit" value="Verstuur" />
+                            <input type="submit" value="Verstuur" class="button purple"/>
                         </li>
                     </ul>
                 </form>
             </div>
 
             <aside>
-                <div class="contact-card">
-                    <div class="circle-big"><i class="fa fa-user" aria-hidden="true"></i></div>
-                    <div class="content">                            
+                <div class="card contact-card">
+                    <div class="circle circle-big circle-purple"><i class="fa fa-user" aria-hidden="true"></i></div>
+                    <div class="content">
                         <h1>Sander Aalbers</h1>
                         <p><i class="fa fa-phone" aria-hidden="true"></i> 06-24606731</p>
                         <p><i class="fa fa-envelope" aria-hidden="true"></i> aalbers.sander@live.nl</p>
                     </div>
                 </div>
 
-                <div class="contact-card">
-                    <div class="circle-big"><i class="fa fa-user" aria-hidden="true"></i></div>
-                    <div class="content">                            
+                <div class="card contact-card">
+                    <div class="circle circle-big circle-purple"><i class="fa fa-user" aria-hidden="true"></i></div>
+                    <div class="content">
                         <h1>Marijn Dame</h1>
                         <p><i class="fa fa-phone" aria-hidden="true"></i> 06-29008323</p>
                         <p><i class="fa fa-envelope" aria-hidden="true"></i> mm.dame@hotmail.com</p>
@@ -144,18 +144,20 @@
                 <div class="column follow">
                     <h2>Volg ons</h2>
 
-                    <a class="circle" href="https://twitter.com/?lang=nl">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a class="circle" href="https://nl-nl.facebook.com/">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                    <a class="circle" href="https://plus.google.com/">
-                        <i class="fa fa-google-plus" aria-hidden="true"></i>
-                    </a>
-                    <a class="circle" href="https://www.instagram.com/?hl=nl">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
+                    <div class="social">
+                        <a class="circle circle-white circle-shadow" href="https://twitter.com/?lang=nl">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle circle-white circle-shadow" href="https://nl-nl.facebook.com/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle circle-white circle-shadow" href="https://plus.google.com/">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle circle-white circle-shadow" href="https://www.instagram.com/?hl=nl">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="column outside">
                     <h2>Bekijk ook eens</h2>
