--- a/bikes.html
+++ b/bikes.html
@@ -8,7 +8,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/bikenation.css" rel="stylesheet">
     <link href="css/bikes.css" rel="stylesheet">
-    
+
     <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
 </head>
 
@@ -86,19 +86,21 @@
                     </div>
                     <div class="column follow">
                         <h2>Volg ons</h2>
-    
-                        <a class="circle" href="https://twitter.com/?lang=nl">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://nl-nl.facebook.com/">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://plus.google.com/">
-                            <i class="fa fa-google-plus" aria-hidden="true"></i>
-                        </a>
-                        <a class="circle" href="https://www.instagram.com/?hl=nl">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                        </a>
+
+                        <div class="social">
+                            <a class="circle circle-white circle-shadow" href="https://twitter.com/?lang=nl">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                            <a class="circle circle-white circle-shadow" href="https://nl-nl.facebook.com/">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <a class="circle circle-white circle-shadow" href="https://plus.google.com/">
+                                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                            </a>
+                            <a class="circle circle-white circle-shadow" href="https://www.instagram.com/?hl=nl">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                     <div class="column outside">
                         <h2>Bekijk ook eens</h2>
