--- a/index.html
+++ b/index.html
@@ -200,18 +200,20 @@
                 <div class="column follow">
                     <h2>Volg ons</h2>
 
-                    <a class="circle" href="https://twitter.com/?lang=nl">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a class="circle" href="https://nl-nl.facebook.com/">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                    <a class="circle" href="https://plus.google.com/">
-                        <i class="fa fa-google-plus" aria-hidden="true"></i>
-                    </a>
-                    <a class="circle" href="https://www.instagram.com/?hl=nl">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
+                    <div class="social">
+                        <a class="circle circle-white circle-shadow" href="https://twitter.com/?lang=nl">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle circle-white circle-shadow" href="https://nl-nl.facebook.com/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle circle-white circle-shadow" href="https://plus.google.com/">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </a>
+                        <a class="circle circle-white circle-shadow" href="https://www.instagram.com/?hl=nl">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="column outside">
                     <h2>Bekijk ook eens</h2>
