--- a/elektrischefiets.html
+++ b/elektrischefiets.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>BikeNation - Elektrischefiets</title>
+    <title>BikeNation - Elektrische fiets</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,700|Roboto:300,400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/bikenation.css" rel="stylesheet">
     <link href="css/fietsen.css" rel="stylesheet">
-
+    <link rel="icon" href="images/logo.png" type="image/png" sizes="16x16">
     <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
 </head>
 
