--- a/omafiets.html
+++ b/omafiets.html
@@ -8,7 +8,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/bikenation.css" rel="stylesheet">
     <link href="css/fietsen.css" rel="stylesheet">
-
+    <link rel="icon" href="images/logo.png" type="image/png" sizes="16x16">
     <script src="https://use.fontawesome.com/7e9c56da16.js"></script>
 </head>
 
