Styled inputs in contact

--- a/contact.html
+++ b/contact.html
@@ -77,16 +77,18 @@
                                 to find it for you and send you there.
                             </p>
                         </li>
-                        <li>
+                        <li class="two-group">
                             <div>
                                 <label>Naam:
                                     <span>*</span>
                                 </label>
                                 <input type="text" name="name">
+                                <span class="underline"></span>
                             </div>
                             <div>
                                 <label>Telefoon:</label>
                                 <input type="text" name="telefoon">
+                                <span class="underline"></span>
                             </div>
                         </li>
                         <li>
@@ -94,12 +96,14 @@
                                 <span>*</span>
                             </label>
                             <input type="email" name="email">
+                            <span class="underline"></span>
                         </li>
                         <li>
                             <label>Bericht:
                                 <span>*</span>
                             </label>
                             <textarea id="bericht"></textarea>
+                            <span class="underline"></span>
                         </li>
                         <li>
                             <input type="submit" value="Verstuur" class="button purple"/>
