Saved all images to local storage

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div id="about">
         <div class="wrapper">
             <div>
-                <img src="http://flashback.as.ucsb.edu/2014-15/files/2015/06/AR15-Bike-Shop-Staff.jpg" alt="">
+                <img src="images/team.jpg" title="BikeNation Team">
                 <p>Het trotse BikeNation team</p>
             </div>
             <article>
