--- a/bakfiets.html
+++ b/bakfiets.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <header class="small-header" style="background-image: url('https://s3-eu-west-1.amazonaws.com/fietsersbond/app/uploads/2013/09/18104011/urbanarrow.jpg')">
+    <header class="small-header" style="background-image: url('images/bakfiets_bikes.jpg')">
         <div class="wrapper">
             <div class="text">
                 <h2>Bakfiets</h2>
