Fixed images paths in Gallery and About

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                     <!-- <h1>Eigenaren</h1> -->
                     <div class="group">
                         <div class="person">
-                            <img src="images/trump.jpg">
+                            <img src="images/Trump.jpg">
                             <div>
                                 <h2>Marijn Dame</h2>
                                 <p>
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="person">
-                            <img src="images/trump.jpg">
+                            <img src="images/Trump.jpg">
                             <div>
                                 <h2>Sander Aalbers</h2>
                                 <p>
@@ -110,7 +110,7 @@
                     <!-- <h1>Medewerkers</h1> -->
                     <div class="group">
                         <div class="person">
-                            <img src="images/trump.jpg">
+                            <img src="images/Trump.jpg">
                             <div>
                                 <h2>John Doe</h2>
                                 <p>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="person">
-                            <img src="images/trump.jpg">
+                            <img src="images/Trump.jpg">
                             <div>
                                 <h2>John Doe</h2>
                                 <p>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="person">
-                            <img src="images/trump.jpg">
+                            <img src="images/Trump.jpg">
                             <div>
                                 <h2>John Doe</h2>
                                 <p>
@@ -146,7 +146,7 @@
                             </div>
                         </div>
                         <div class="person">
-                            <img src="images/trump.jpg">
+                            <img src="images/Trump.jpg">
                             <div>
                                 <h2>John Doe</h2>
                                 <p>
