--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
                     <div class="box">
                         <a href="omafiets.html">
                             <div>
-                                <img src="images/omafiets.jpg" alt="Oma fiets">
+                                <img src="images/omafiets_gallery.jpg" alt="Oma fiets">
                                 <div class="overlay">
                                     <h2>Oma Fiets</h2>
                                 </div>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="box">
                     <a href="omafiets.html">
-                        <img src="images/omafiets.jpg" alt="Oma Fiets">
+                        <img src="images/omafiets_gallery.jpg" alt="Oma Fiets">
                         <div class="overlay">
                             <h2>Oma Fiets</h2>
                         </div>
